--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,7 +1,27 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/rlScreen"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:onClick="setRandomBackground"
     tools:context=".MainActivity">
+
+    <RelativeLayout
+        android:background="#30000000"
+        android:layout_width="match_parent"
+        android:minHeight="72dp"
+        android:layout_height="wrap_content">
+
+        <TextView
+            android:id="@+id/tvHex"
+            android:text="@string/default_color"
+            android:textColor="#FFF"
+            android:textSize="36sp"
+            android:layout_gravity="center_vertical"
+            android:layout_margin="12dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+
+    </RelativeLayout>
 
 </RelativeLayout>
